# openenv-ticket-triage

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
docs/: IMPLEMENTATION_PLAN.md  OpenEnv_Comprehensive_Guide.md  OpenEnv_Environment_Task.md  PreSubmission_checklist.md  README.md
scripts/: validate-submission.sh
server/: app.py
tests/: test_env_lifecycle.py  test_graders.py  test_inference_config.py  test_models.py
ticket_triage_env/: __init__.py  client.py  models.py
ticket_triage_env/data/scenarios/: easy.json  hard.json  medium.json
ticket_triage_env/graders/: __init__.py  aggregate.py  rules.py
ticket_triage_env/server/: __init__.py  app.py  environment.py  logging_config.py
