[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-ticket-triage"
version = "0.1.0"
description = "Deterministic customer support ticket triage environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Thomas Vempeny" }
]
dependencies = [
  "openenv-core[core]>=0.2.2",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "requests>=2.32.0",
  "openai>=1.40.0",
  "pyyaml>=6.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ticket_triage_env*"]